--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,8 +10,8 @@
     <img class="banner" src="/img/banner01.jpg" alt="Banner ApeGo">
     <div class="main-text">
     <p >
-      Lorem Ipsum is simply dummy text of the printing and typesetting<br>
-        industry. Lorem Ipsum has been the industry's standard dummy.
+      Venha acompanhar o que acontece em seu condomínio<br>
+        sem precisar sair de casa!
     </p>
 </div>
     <div class="advantage">
@@ -20,19 +20,19 @@
             <img src="/img/shield-icon-lightblue.svg" alt="Shield" width="120px" height="120px">
        
             <p>
-              It is a long established fact that a reader.
+              Navegue com segurança
             </p>
         </div>
         <div class="item">
             <img src="/img/admin-icon-lightblue.svg" alt="Admin" width="120px" height="120px">
             <p>
-              It is a long established fact that a reader.
+              Gerencie com simplicidade
             </p>
         </div>
         <div class="item">
             <img src="/img/view-icon-lightblue.svg" alt="View" width="120px" height="120px">
             <p>
-              It is a long established fact that a reader.
+              Aproveite em qualquer lugar
             </p>
         </div>
 
